# 4-practica-mascotas-virtuales-alejandro-casas-y-juan-andres-correa

./: README.md  RevisionDelProfe  diagrama.md
POO/: CMakeLists.txt  main.cpp
POO/src/: Habilidad.cpp  Habilidad.h  Mascota.cpp  Mascota.h  PixelPets.h  Usuario.cpp  Usuario.h
Solucion/: CMakeLists.txt  main.cpp
Solucion/src/: Cuidado.cpp  Cuidado.h  Habilidad.cpp  Habilidad.h  Mascota.cpp  Mascota.h  Objeto.cpp  Objeto.h  PixelPets.cpp  PixelPets.h  Usuario.cpp  Usuario.h
