cmake_minimum_required(VERSION 3.10.0)
project(Solucion VERSION 0.1.0 LANGUAGES C CXX)

add_executable(Solucion main.cpp src/Mascota.cpp src/Mascota.h src/Habilidad.h src/Habilidad.cpp src/PixelPets.cpp src/PixelPets.h src/Usuario.cpp src/Usuario.h src/Objeto.h src/Objeto.cpp src/Cuidado.h src/Cuidado.cpp)